--- a/tests/manual/index.html
+++ b/tests/manual/index.html
@@ -2,11 +2,12 @@
 <html>
 <head>
     <meta charset='utf-8'>
+    <meta name="viewport" content="width = device-width">
     <title>Forms CSS</title>
     <link rel="stylesheet" type="text/css" href="http://necolas.github.com/normalize.css/1.0.2/normalize.css">
     <link rel="stylesheet" href="http://yui.yahooapis.com/3.6.0/build/cssbutton/cssbutton.css">
-    <link rel="stylesheet" type="text/css" href="https://raw.github.com/yui/gridbuilder/master/examples/magazine/grids-responsive.css">
-    <link rel="stylesheet" type="text/css" href="css/forms.css">
+    <link rel="stylesheet" type="text/css" href="assets/grids-responsive.css">
+    <link rel="stylesheet" type="text/css" href="../../../../build/gallery-cssforms/gallery-cssforms.css">
     <style>
         body {
             font-family: sans-serif;
@@ -88,26 +89,26 @@
           <fieldset>
             <legend>Legend</legend>
 
-            <div class='y-g-responsive'>
-                <div class='y-u-1-3'>
+            <div class='yui3-g-responsive'>
+                <div class='yui3-u-1-3'>
                     <label>First Name</label>
                     <input type="text">
                 </div>
-                <div class='y-u-1-3'>
+                <div class='yui3-u-1-3'>
                     <label>Last Name</label>
                     <input type="text">
                 </div>
-                <div class='y-u-1-3'>
+                <div class='yui3-u-1-3'>
                     <label>E-Mail</label>
                     <input type="email" required>
                 </div>
                 
-                <div class='y-u-1-3'>
+                <div class='yui3-u-1-3'>
                     <label>City</label>
                     <input type="text">
                 </div>
 
-                <div class='y-u-1-3'>
+                <div class='yui3-u-1-3'>
                     <label>State</label>
                     <select class='yui3-input-medium'>
                         <option>AL</option>
