rename form classnames

--- a/tests/manual/index.html
+++ b/tests/manual/index.html
@@ -55,6 +55,15 @@
     </div>
 
     <div class="content">
+
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+
         <h2>Default Form</h2>
         <form>
           <fieldset>
@@ -129,7 +138,7 @@
 
         <h2>Inline Form</h2>
 
-        <form class="yui3-inline-form">
+        <form class="yui3-form-line">
             <legend>A compact inline form</legend>
           <input type="text" class="yui3-input-small" placeholder="Email">
           <input type="password" class="yui3-input-small" placeholder="Password">
@@ -142,7 +151,7 @@
 
         <h2>Horizontal Form</h2>
 
-        <form class="yui3-horizontal-form">
+        <form class="yui3-form-horizontal">
           <fieldset>
             <div class="yui3-control-group">
                 <label>Username</label>
@@ -203,7 +212,7 @@
         <input class="yui3-input-xlarge" id="disabledInput" type="text" placeholder="Disabled input here..." disabled>
 
         <h2>Rounded Form</h2>
-        <form class="yui3-rounded-form">
+        <form class="yui3-form-rounded">
           <input type="text" class="yui3-input-medium">
           <button type="submit" class='yui3-button'>Search</button>
         </form>
