update manual test

--- a/tests/manual/index.html
+++ b/tests/manual/index.html
@@ -56,15 +56,16 @@
 
     <div class="content">
 
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p>
+            gallery-cssforms` is a YUI Gallery module that makes it easy to display good looking forms on your website. 
+        </p>
 
 
         <h2>Default Form</h2>
+
+        <p>
+            If no class name is placed on the form element, form labels are stacked on top of input elements and other form controls.
+        </p>
         <form>
           <fieldset>
             <legend>Legend</legend>
@@ -93,6 +94,10 @@
         </form>
 
         <h2>Multi-Column Form (with YUI Grids)</h2>
+
+        <p>
+            Multi-column forms such as the one below can be created by pulling down YUI Grids. 
+        </p>
 
         <form>
           <fieldset>
@@ -212,8 +217,8 @@
         <input class="yui3-input-xlarge" id="disabledInput" type="text" placeholder="Disabled input here..." disabled>
 
         <h2>Rounded Form</h2>
-        <form class="yui3-form-rounded">
-          <input type="text" class="yui3-input-medium">
+        <form>
+          <input type="text" class="yui3-input-medium yui3-input-rounded">
           <button type="submit" class='yui3-button'>Search</button>
         </form>
 
@@ -238,16 +243,16 @@
         <h2>Checkboxes and Radios</h2>
         <label class="yui3-checkbox">
           <input type="checkbox" value="">
-          Option one is this and that—be sure to include why it's great
+          Here's option one. 
         </label>
          
         <label class="yui3-radio">
           <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1" checked>
-          Option one is this and that—be sure to include why it's great
+          Here's a radio button. You can choose this one..
         </label>
         <label class="yui3-radio">
           <input type="radio" name="optionsRadios" id="optionsRadios2" value="option2">
-          Option two can be something else and selecting it will deselect option one
+          ..Or this one! 
         </label>
     </div>
 </body>
