--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
             margin:50px 0 20px 0;
             font-weight:bold;
         }
+        .gist {
+            margin:20px 0;
+        }
     </style>
 </head>
 <body class="yui3-skin-sam">
@@ -93,6 +96,8 @@
           </fieldset>
         </form>
 
+        <script src="https://gist.github.com/4447700.js"></script>
+
         <h2>Multi-Column Form (with YUI Grids)</h2>
 
         <p>
@@ -140,6 +145,7 @@
           </fieldset>
         </form>
 
+        <script src="https://gist.github.com/4447706.js"></script>
 
         <h2>Inline Form</h2>
 
@@ -153,6 +159,7 @@
           <button type="submit" class="yui3-button">Sign in</button>
         </form>
 
+        <script src="https://gist.github.com/4447716.js"></script>
 
         <h2>Horizontal Form</h2>
 
@@ -187,6 +194,8 @@
           </fieldset>
         </form>
 
+        <script src="https://gist.github.com/4447718.js"></script>
+
         <h2>Grouped Inputs</h2>
 
         <form>
@@ -202,6 +211,8 @@
             <button type="submit" class="yui3-button yui3-input-large">Sign in</button>
         </form>
 
+        <script src="https://gist.github.com/4447722.js"></script>
+
         <h2>Input Sizing</h2>
         <input class="yui3-input-mini" type="text" placeholder=".yui3-input-mini">
         <input class="yui3-input-small" type="text" placeholder=".yui3-input-small">
@@ -210,18 +221,25 @@
         <input class="yui3-input-xlarge" type="text" placeholder=".yui3-input-xlarge">
         <input class="yui3-input-xxlarge" type="text" placeholder=".yui3-input-xxlarge">
 
+        <script src="https://gist.github.com/4447727.js"></script>
+
         <h2>Invalid Inputs</h2>
         <input class="yui3-input-medium" type="email" placeholder="Requires an email" required>
+
+        <script src="https://gist.github.com/4447729.js"></script>
 
         <h2>Disabled Inputs</h2>
         <input class="yui3-input-xlarge" id="disabledInput" type="text" placeholder="Disabled input here..." disabled>
 
-        <h2>Rounded Form</h2>
+        <script src="https://gist.github.com/4447733.js"></script>
+
+        <h2>Rounded Inputs</h2>
         <form>
           <input type="text" class="yui3-input-medium yui3-input-rounded">
           <button type="submit" class='yui3-button'>Search</button>
         </form>
 
+        <script src="https://gist.github.com/4447736.js"></script>
 
         <h2>Selects</h2>
         <select class='yui3-input-medium'>
