change gallery to gallery-css

--- a/tests/manual/index.html
+++ b/tests/manual/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="http://necolas.github.com/normalize.css/1.0.2/normalize.css">
     <link rel="stylesheet" href="http://yui.yahooapis.com/3.6.0/build/cssbutton/cssbutton.css">
     <link rel="stylesheet" type="text/css" href="assets/grids-responsive.css">
-    <link rel="stylesheet" type="text/css" href="../../../../build/gallery-cssform/gallery-cssform.css">
+    <link rel="stylesheet" type="text/css" href="../../../../build/gallerycss-cssform/gallerycss-cssform.css">
     <style>
         body {
             font-family: sans-serif;
@@ -57,7 +57,7 @@
     <div class="content">
 
         <p>
-            gallery-cssforms` is a YUI Gallery module that makes it easy to display good looking forms on your website. 
+            gallerycss-cssforms` is a YUI Gallery module that makes it easy to display good looking forms on your website. 
         </p>
 
 
