--- a/index.html
+++ b/index.html
@@ -58,6 +58,26 @@
     </div>
 
     <div class="content">
+        <h2>First, include it on your page</h2>
+
+        <p>Add the CSS on your page:</p>
+
+        <code>
+          &lt;link rel=&quot;stylesheet&quot; type=&quot;text/css&quot; href=&quot;http://yui.yahooapis.com/gallery-2013.01.09-23-24/build/gallerycss-cssform/gallerycss-cssform.css&quot;&gt;
+        </code>
+
+        <p>Optionally, you can load it through the <code>YUI().use()</code>:</p>
+
+        <pre>
+          YUI({
+            //specify a gallery build
+            gallery: 'gallery-2013.01.09-23-24'
+          }).use(gallerycss-cssform', function(Y) {
+            Y.log('YUI Loaded');     
+          });
+        </pre>
+
+
         <h2>Default Form</h2>
 
         <p>
