--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="http://necolas.github.com/normalize.css/1.0.2/normalize.css">
     <link rel="stylesheet" href="http://yui.yahooapis.com/3.6.0/build/cssbutton/cssbutton.css">
     <link rel="stylesheet" type="text/css" href="assets/grids-responsive.css">
-    <link rel="stylesheet" type="text/css" href="css/gallery-cssform.css">
+    <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/gallery-2013.01.09-23-24/build/gallerycss-cssform/gallerycss-cssform.css">
     <style>
         body {
             font-family: sans-serif;
@@ -28,12 +28,19 @@
              }
 
         h1,h2,h3,h4,h5,h6 {
-            font-family: "HelveticaNeue-Light", "Helvetica Neue Light",
-                         "Helvetica Neue", sans-serif;
+            font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", sans-serif;
             font-weight: 300;
             margin:0;
             padding:0;
         }
+        code {
+          padding: 2px 4px;
+          border-radius:3px;
+          margin: 3px;
+          background: #FEFFD4;
+          color:#464729;
+        }
+        
         .content {
             padding:0 30px;
         }
@@ -69,12 +76,12 @@
         <p>Optionally, you can load it through the <code>YUI().use()</code>:</p>
 
         <pre>
-          YUI({
-            //specify a gallery build
-            gallery: 'gallery-2013.01.09-23-24'
-          }).use(gallerycss-cssform', function(Y) {
-            Y.log('YUI Loaded');     
-          });
+    YUI({
+        //specify a gallery build
+        gallery: 'gallery-2013.01.09-23-24'
+    }).use('gallerycss-cssform', function(Y) {
+        Y.log('YUI Loaded');     
+    });
         </pre>
 
 
