--- a/index.html
+++ b/index.html
@@ -184,6 +184,8 @@
 
         <h2>Horizontal Form</h2>
 
+        <p>Horizontal forms are great for standard forms that look well-aligned. The labels are right-aligned against the form input controls.</p>
+
         <form class="yui3-form-horizontal">
           <fieldset>
             <div class="yui3-control-group">
@@ -219,6 +221,8 @@
 
         <h2>Grouped Inputs</h2>
 
+        <p>Grouped inputs are great for grouping small sets of text-based input elements. They work well for sign-up forms, and look natural on mobile devices.</p>
+
         <form>
             <fieldset class='yui3-group'>
                 <input type="text" class='yui3-input-large' placeholder='Username'>
@@ -235,6 +239,10 @@
         <script src="https://gist.github.com/4447722.js"></script>
 
         <h2>Input Sizing</h2>
+
+        <p>You can size any input element by adding the classnames below. Since these styles just set <code>width</code>, they can be  applied to more than just form controls.</p>
+
+
         <input class="yui3-input-mini" type="text" placeholder=".yui3-input-mini">
         <input class="yui3-input-small" type="text" placeholder=".yui3-input-small">
         <input class="yui3-input-medium" type="text" placeholder=".yui3-input-medium">
@@ -245,16 +253,24 @@
         <script src="https://gist.github.com/4447727.js"></script>
 
         <h2>Invalid Inputs</h2>
+
+        <p>Add the <code>required</code> attribute to any form control.</p>
         <input class="yui3-input-medium" type="email" placeholder="Requires an email" required>
 
         <script src="https://gist.github.com/4447729.js"></script>
 
         <h2>Disabled Inputs</h2>
+
+        <p>Add the <code>disabled</code> attribute to any form control.</p>
+
         <input class="yui3-input-xlarge" id="disabledInput" type="text" placeholder="Disabled input here..." disabled>
 
         <script src="https://gist.github.com/4447733.js"></script>
 
         <h2>Rounded Inputs</h2>
+
+        <p>Add the <code>yui3-input-rounded</code> classname to any form control.</p>
+
         <form>
           <input type="text" class="yui3-input-medium yui3-input-rounded">
           <button type="submit" class='yui3-button'>Search</button>
