--- a/tests/manual/index.html
+++ b/tests/manual/index.html
@@ -10,8 +10,9 @@
     <link rel="stylesheet" type="text/css" href="../../../../build/gallerycss-cssform/gallerycss-cssform.css">
     <style>
         body {
-            font-family: sans-serif;
+            font-family:"Helvetica Neue", sans-serif;
             color: #333;
+            font-size:1.2em;
         }
 
         .header {
@@ -42,6 +43,11 @@
             color:#2B474F;
             margin:50px 0 20px 0;
             font-weight:bold;
+        }
+
+        .notice {
+            background-color: #61B842;
+            color: white;
         }
     </style>
 </head>
@@ -89,7 +95,7 @@
             <label class="yui3-checkbox">
               <input type="checkbox"> I've read the terms and conditions
             </label>
-            <button type="submit" class='yui3-button'>Submit</button>
+            <button type="submit" class='yui3-button notice'>Submit</button>
           </fieldset>
         </form>
 
