--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     <link rel="stylesheet" type="text/css" href="http://necolas.github.com/normalize.css/1.0.2/normalize.css">
     <link rel="stylesheet" href="http://yui.yahooapis.com/3.6.0/build/cssbutton/cssbutton.css">
     <link rel="stylesheet" type="text/css" href="assets/grids-responsive.css">
-    <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/gallery-2013.01.09-23-24/build/gallerycss-cssform/gallerycss-cssform.css">
+    <link rel="stylesheet" type="text/css" href="https://rawgithub.com/tilomitra/cssforms/master/css/forms.css">
+    <link rel="stylesheet" type="text/css" href="https://rawgithub.com/tilomitra/cssforms/master/css/forms-responsive.css">
     <style>
         body {
-            font-family: sans-serif;
+            font-family: "Helvetica Neue", sans-serif;
             color: #333;
+            font-size:1.2em;
         }
 
         .header {
@@ -67,10 +69,16 @@
     <div class="content">
         <h2>First, include it on your page</h2>
 
-        <p>Add the CSS on your page:</p>
+        <p>Get the latest released CSS on your page:</p>
 
         <code>
           &lt;link rel=&quot;stylesheet&quot; type=&quot;text/css&quot; href=&quot;http://yui.yahooapis.com/gallery-2013.01.09-23-24/build/gallerycss-cssform/gallerycss-cssform.css&quot;&gt;
+        </code>
+
+        <p>Or you could get the latest from <a href="http://github.com/tilomitra/cssforms">Github</a></p>
+
+        <code>
+            &lt;link rel=&quot;stylesheet&quot; type=&quot;text/css&quot; href=&quot;https://rawgithub.com/tilomitra/cssforms/master/css/forms.css&quot;&gt;
         </code>
 
         <p>Optionally, you can load it through the <code>YUI().use()</code>:</p>
