--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset='utf-8'>
     <meta name="viewport" content="width = device-width">
-    <title>Forms CSS</title>
+    <title>YUI Forms CSS</title>
     <link rel="stylesheet" type="text/css" href="http://necolas.github.com/normalize.css/1.0.2/normalize.css">
     <link rel="stylesheet" href="http://yui.yahooapis.com/3.6.0/build/cssbutton/cssbutton.css">
     <link rel="stylesheet" type="text/css" href="assets/grids-responsive.css">
@@ -44,7 +44,7 @@
 
     <div class="header y-u-1">
 
-        <h1 class="yui3-u-1">YUI3 Forms CSS</h1>
+        <h1 class="yui3-u-1">YUI Forms CSS</h1>
         <h2 class="yui3-u">Simple styling for HTML Form elements.</h2>
 
     </div>
