--- a/index.html
+++ b/index.html
@@ -60,15 +60,17 @@
 
         <p>Get the latest released CSS on your page:</p>
 
-        <code>
-          &lt;link rel=&quot;stylesheet&quot; type=&quot;text/css&quot; href=&quot;http://yui.yahooapis.com/gallery-2013.01.09-23-24/build/gallerycss-cssform/gallerycss-cssform.css&quot;&gt;
-        </code>
+        <pre>
+
+&lt;link rel=&quot;stylesheet&quot; type=&quot;text/css&quot; href=&quot;http://yui.yahooapis.com/gallery-2013.01.09-23-24/build/gallerycss-cssform/gallerycss-cssform.css&quot;&gt;
+        </pre>
 
         <p>Or you could get the latest from <a href="http://github.com/tilomitra/cssforms">Github</a></p>
 
-        <code>
-            &lt;link rel=&quot;stylesheet&quot; type=&quot;text/css&quot; href=&quot;https://rawgithub.com/tilomitra/cssforms/master/css/forms.css&quot;&gt;
-        </code>
+        <pre>
+            
+&lt;link rel=&quot;stylesheet&quot; type=&quot;text/css&quot; href=&quot;https://rawgithub.com/tilomitra/cssforms/master/css/forms.css&quot;&gt;
+        </pre>
 
         <p>Optionally, you can load it through the <code>YUI().use()</code>:</p>
 
