--- a/tests/manual/index.html
+++ b/tests/manual/index.html
@@ -4,13 +4,15 @@
     <meta charset='utf-8'>
     <meta name="viewport" content="width = device-width">
     <title>Forms CSS</title>
-    <link rel="stylesheet" type="text/css" href="http://necolas.github.com/normalize.css/1.0.2/normalize.css">
-    <link rel="stylesheet" href="http://yui.yahooapis.com/3.6.0/build/cssbutton/cssbutton.css">
-    <link rel="stylesheet" type="text/css" href="assets/grids-responsive.css">
-    <link rel="stylesheet" type="text/css" href="../../../../build/gallerycss-cssform/gallerycss-cssform.css">
+    <link rel="stylesheet" type="text/css" href="../../../../../yui3/build/cssnormalize/cssnormalize.css">
+    <link rel="stylesheet" href="../../../../../yui3/build/cssbutton/cssbutton.css">
+    <link rel="stylesheet" type="text/css" href="../../../../../yui3/build/cssgrids-responsive/cssgrids-responsive-min.css">
+<!--     <link rel="stylesheet" type="text/css" href="../../../../build/gallerycss-cssform/gallerycss-cssform.css">
+ -->    
+    <link rel="stylesheet" type="text/css" href="../../css/forms.css">
+    <link rel="stylesheet" type="text/css" href="../../css/forms-responsive.css">
     <style>
         body {
-            font-family:"Helvetica Neue", sans-serif;
             color: #333;
             font-size:1.2em;
         }
@@ -67,6 +69,51 @@
         </p>
 
 
+
+        <h2>Prepended and Appended Inputs</h2>
+
+        <div class="yui3-input-prepend">
+            <span class="yui3-addon">@</span>
+            <input class="yui3-input-medium" type="text" placeholder="Username">
+        </div>
+
+
+        <div class="yui3-input-append">
+            <input class="yui3-input-medium" type="text" placeholder="Length of road">
+            <span class="yui3-addon">miles to go</span>
+        </div>
+
+        <div class="yui3-input-prepend yui3-input-append">
+            <span class="yui3-addon">There are</span>
+            <input class="yui3-input-medium" type="text" placeholder="Length of road">
+            <span class="yui3-addon">miles to go</span>
+        </div>
+
+        <div class="yui3-input-prepend yui3-input-append">
+            <span class="yui3-addon">There are</span>
+            <input class="yui3-input-medium yui3-input-rounded" type="text" placeholder="Length of road">
+            <span class="yui3-addon">miles to go</span>
+        </div>
+
+        <h2>Prepended and Appended Buttons</h2>
+
+        <div class="yui3-input-prepend">
+            <button type="submit" class="yui3-button yui3-input-small">Search</button>
+            <input class="yui3-input-medium" type="text" placeholder="Length of road">
+        </div>
+
+        <div class="yui3-input-append">
+            <input class="yui3-input-medium" type="text" placeholder="Length of road">
+            <button type="submit" class="yui3-button yui3-input-small notice">Sign in</button>
+        </div>
+
+        <div class="yui3-input-append">
+            <input class="yui3-input-medium" type="text" placeholder="Length of road">
+            <button type="submit" class="yui3-button yui3-input-small">Search</button>
+            <button type="submit" class="yui3-button yui3-input-small">Reset</button>
+
+        </div>
+
         <h2>Default Form</h2>
 
         <p>
@@ -109,7 +156,7 @@
           <fieldset>
             <legend>Legend</legend>
 
-            <div class='yui3-g-responsive'>
+            <div class='yui3-g-r'>
                 <div class='yui3-u-1-3'>
                     <label>First Name</label>
                     <input type="text">
@@ -149,10 +196,10 @@
 
         <h2>Inline Form</h2>
 
-        <form class="yui3-form-line">
+        <form class="yui3-form-inline">
             <legend>A compact inline form</legend>
-          <input type="text" class="yui3-input-small" placeholder="Email">
-          <input type="password" class="yui3-input-small" placeholder="Password">
+          <input type="text" class="yui3-input-medium" placeholder="Email">
+          <input type="password" class="yui3-input-medium" placeholder="Password">
           <label class="yui3-checkbox">
             <input type="checkbox"> Remember me
           </label>
@@ -208,6 +255,9 @@
             <button type="submit" class="yui3-button yui3-input-large">Sign in</button>
         </form>
 
+
+
+
         <h2>Input Sizing</h2>
         <input class="yui3-input-mini" type="text" placeholder=".yui3-input-mini">
         <input class="yui3-input-small" type="text" placeholder=".yui3-input-small">
@@ -261,5 +311,7 @@
           ..Or this one! 
         </label>
     </div>
+    <script type="text/javascript" src="//use.typekit.net/ajf8ggy.js"></script>
+    <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 </body>
 </html>
