--- a/index.html
+++ b/index.html
@@ -237,6 +237,46 @@
 
         <script src="https://gist.github.com/4447722.js"></script>
 
+        <h2>Prepended and Appended Inputs</h2>
+
+        <div class="yui3-input-prepend">
+            <span class="yui3-addon">@</span>
+            <input class="yui3-input-medium" type="text" placeholder="Username">
+        </div>
+
+        <div class="yui3-input-append">
+            <input class="yui3-input-medium" type="text" placeholder="Length of road">
+            <span class="yui3-addon">miles to go</span>
+        </div>
+
+        <div class="yui3-input-prepend yui3-input-append">
+            <span class="yui3-addon">There are</span>
+            <input class="yui3-input-medium" type="text" placeholder="Length of road">
+            <span class="yui3-addon">miles to go</span>
+        </div>
+
+        <script src="https://gist.github.com/tilomitra/5091879.js"></script>
+
+        <h2>Prepended and Appended Buttons</h2>
+
+        <div class="yui3-input-prepend">
+            <button type="submit" class="yui3-button yui3-input-small">Search</button>
+            <input class="yui3-input-medium" type="text" placeholder="Length of road">
+        </div>
+
+        <div class="yui3-input-append">
+            <input class="yui3-input-medium" type="text" placeholder="Length of road">
+            <button type="submit" class="yui3-button yui3-input-small notice">Sign in</button>
+        </div>
+
+        <div class="yui3-input-append">
+            <input class="yui3-input-medium" type="text" placeholder="Length of road">
+            <button type="submit" class="yui3-button yui3-input-small">Search</button>
+            <button type="submit" class="yui3-button yui3-input-small">Reset</button>
+        </div>
+
+        <script src="https://gist.github.com/tilomitra/5091883.js"></script>
+
         <h2>Input Sizing</h2>
 
         <p>You can size any input element by adding the classnames below. Since these styles just set <code>width</code>, they can be  applied to more than just form controls.</p>
