--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 
         <h2>Inline Form</h2>
 
-        <form class="yui3-form-line">
+        <form class="yui3-form-inline">
             <legend>A compact inline form</legend>
           <input type="text" class="yui3-input-small" placeholder="Email">
           <input type="password" class="yui3-input-small" placeholder="Password">
