h1 should be white

--- a/index.html
+++ b/index.html
@@ -26,9 +26,12 @@
         .header {
              background: rgb(175, 55, 50);
          }
-             .header h2 {
-                 color: rgb(75, 14, 14);
-             }
+            .header h1 {
+                color: #fff;
+            }
+            .header h2 {
+                color: rgb(75, 14, 14);
+            }
 
         .notice {
             background-color: #61B842;
